# doom-clone

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Sprite.hpp  build.ninja  check_weapon.py  cmake_install.cmake  create_png.py  debug_sound.py  debug_weapon.py  engine.cpp  engine.hpp  extract_replaces.py  extracted.txt  fix_engine_audio.py  fix_engine_pain.py  inspect_pixels.py  inspect_png.py  inspect_weapon.py  inspect_weapon_frames.py  inspect_weapon_tl.py  map.hpp  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  patch_ai.py  patch_ai_los.py  patch_audio1.py  patch_audio2.py  patch_audio3.py  patch_audio4.py  patch_audio_debug.py  patch_audio_debug2.py  patch_audio_flush.py  patch_audio_freq.py  patch_audio_resume.py  patch_death.py  (+31 more)
include/: Sprite.hpp  engine.hpp  font.hpp  map.hpp  player.hpp  raycaster.hpp
src/: engine.cpp  main.cpp  raycaster.cpp
